--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -4,7 +4,7 @@
 //= require subjects.crud
 //= require dates.crud
 //= require notes.crud
-//= require subrecord.crud
+//= require aspace_forms
 
 $(function() {
 
