--- a/frontend/app/views/resources/new.html.erb
+++ b/frontend/app/views/resources/new.html.erb
@@ -1,16 +1,20 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Resources", :controller => :resources, :action => :index),"New Resource"]} %>
 
-<%= jsonmodel_form_for @resource, :as => "resource", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
-  <div class="row-fluid">
-     <div class="span3">
-        <%= render :partial => "resources/sidebar" %>
-     </div> <!-- span3 -->
-     <div class="span9 record-pane" id="object_container">
-       <%= render :partial => "resources/form_container", :locals => {:f => f} %>
-       <div class="form-actions">            
-          <button type="submit" class="btn btn-primary">Save Resource</button>   
-          <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+<%= form_for @resource, :as => "resource", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+  <%= form_context :resource, @resource.to_hash(true) do |form| %>
+    <div class="row-fluid">
+       <div class="span3">
+          <%= render :partial => "resources/sidebar" %>
+       </div> <!-- span3 -->
+       <div class="span9 record-pane" id="object_container">
+
+         <%= render :partial => "resources/form_container", :locals => {:form => form} %>
+
+         <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Save Resource</button>
+            <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+         </div>
        </div>
-     </div>
-  </div>
+    </div>
+  <% end %>
 <% end %>
