Get Extents subform working with new form helper

--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -13,7 +13,7 @@
 </section>
 
 
-<%#= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :extents} %>
+<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
 <%#= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :dates} %>
 <%#= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :external_documents} %>
 <%#= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :rights_statements} %>
