--- a/frontend/app/views/extents/_form.html.erb
+++ b/frontend/app/views/extents/_form.html.erb
@@ -1,9 +1,12 @@
-<div class="subrecord-form-fields" data-allow-removal="true">
-  <%= f.label_and_field :portion %>
-  <%= f.label_and_field :number %>
-  <%= f.label_and_field :extent_type %>
-  <hr/>
-  <%= f.label_and_textarea :container_summary %>
-  <%= f.label_and_textarea :physical_details %>
-  <%= f.label_and_field :dimensions %>
-</div>
+<% define_template "extent" do |form| %>
+  <div class="subrecord-form-fields">
+    <%= form.label_and_textfield("portion") %>
+    <%= form.label_and_textfield("number") %>
+    <%= form.label_and_textfield("extent_type") %>
+    <%= form.label_and_textfield("portion") %>
+    <hr/>
+    <%= form.label_and_textfield("container_summary") %>
+    <%= form.label_and_textfield("physical_details") %>
+    <%= form.label_and_textfield("dimensions") %>
+  </div>
+<% end %>
