Add extent to the resources form too

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -4,7 +4,7 @@
 //= require subjects.crud
 //= require dates.crud
 //= require notes.crud
-//= require aspace_forms
+//= require subrecord.crud
 
 $(function() {
 
