--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -14,8 +14,8 @@
   <%= render :partial => "notes/form", :locals => {:form => form} %>
 
 
-  <%# render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @resource, :method => :extents} %>
-  <%# render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @resource, :method => :dates} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
+  <%# ren=der :partial => "shared/subrecord_form", :locals => {:f => f, :object => @resource, :method => :dates} %>
   <%# render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @resource, :method => :external_documents} %>
   <%# render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @resource, :method => :rights_statements} %>
 
