--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -14,7 +14,7 @@
 
 
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
-<%#= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :dates} %>
+<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
 <%#= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :external_documents} %>
 <%#= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :rights_statements} %>
 
