--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -16,8 +16,7 @@
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
-<%#= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :rights_statements} %>
-
+<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "rights_statements"} %>
 
 <div class="form-actions">            
   <button type="submit" class="btn btn-primary">Save Accession</button>
