Refactor Agent forms

--- a/frontend/app/views/agents/_contact_details.html.erb
+++ b/frontend/app/views/agents/_contact_details.html.erb
@@ -1,17 +1,17 @@
-<div class="subrecord-form-fields" data-allow-removal="true">
-  <a href="javascript:void(0)" class="btn btn-mini pull-right subrecord-form-remove"><span class='icon-remove'></span></a>
-
-  <%= f.label_and_field :name %>
-  <%= f.label_and_field :salutation %>
-  <%= f.label_and_field :address_1 %>
-  <%= f.label_and_field :address_2 %>
-  <%= f.label_and_field :address_3 %>
-  <%= f.label_and_field :city %>
-  <%= f.label_and_field :region %>
-  <%= f.label_and_field :country %>
-  <%= f.label_and_field :post_code %>
-  <%= f.label_and_field :telephone %>
-  <%= f.label_and_field :telephone_ext %>
-  <%= f.label_and_field :fax %>
-  <%= f.label_and_field :email %>
-</div>
+<% define_template "agent_contact_details" do |form| %>
+  <div class="subrecord-form-fields">
+    <%= form.label_and_textfield "name" %>
+    <%= form.label_and_textfield "salutation" %>
+    <%= form.label_and_textfield "address_1" %>
+    <%= form.label_and_textfield "address_2" %>
+    <%= form.label_and_textfield "address_3" %>
+    <%= form.label_and_textfield "city" %>
+    <%= form.label_and_textfield "region" %>
+    <%= form.label_and_textfield "country" %>
+    <%= form.label_and_textfield "post_code" %>
+    <%= form.label_and_textfield "telephone" %>
+    <%= form.label_and_textfield "telephone_ext" %>
+    <%= form.label_and_textfield "fax" %>
+    <%= form.label_and_textfield "email" %>
+  </div>
+<% end %>
