--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -1,14 +1,16 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Accessions", :controller => :accessions, :action => :index), link_to(@accession.title, :controller => :accessions, :action => :show, :id => @accession.id), "Edit"]} %>
 
-<%= jsonmodel_form_for @accession, :as => "accession", :url => {:action => :update, :id => @accession.id}, :html => {:class => 'form-horizontal', :id => "accession_form"} do |f| %>
-  <div class="row-fluid">
-    <div class="span3">
-      <%= render :partial => "sidebar" %>
+<%= form_for @accession, :as => "accession", :url => {:action => :create}, :html => {:class => 'form-horizontal', :id => "accession_form"} do |f| %>
+  <%= form_context :accession, @accession.to_hash(true) do |form| %>
+    <div class="row-fluid">
+      <div class="span3">
+        <%= render :partial => "sidebar" %>
+      </div>
+      <div class="span9 record-pane">
+        <h2><%= @accession.title%> <span class="label label-info">Accession</span></h2>
+        <input type="hidden" name="_method" value="put" />
+        <%= render :partial => "accessions/form", :locals => {:form => form} %>
+      </div>
     </div>
-    <div class="span9 record-pane">
-      <h2><%= @accession.title%> <span class="label label-info">Accession</span></h2>
-      <input type="hidden" name="_method" value="put" />
-      <%= render :partial => "accessions/form", :locals => {:f => f} %>
-    </div>
-  </div>
+  <% end %>
 <% end %>
