Refactor Subjects forms; and fix error in agents form -- sending the wrong object ot the messages partial

--- a/frontend/app/views/agents/_form.html.erb
+++ b/frontend/app/views/agents/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => "shared/form_messages", :locals => {:object => @accession, :form => form} %>
+<%= render :partial => "shared/form_messages", :locals => {:object => @agent, :form => form} %>
 
 <%= render :partial => "agents/name_forms/#{@agent.agent_type}", :locals => {:form => form} %>
 <%= render :partial => "agents/contact_details", :locals => {:form => form} %>
