--- a/frontend/app/views/subjects/_new.html.erb
+++ b/frontend/app/views/subjects/_new.html.erb
@@ -1,4 +1,6 @@
-<%= jsonmodel_form_for @subject, :as => "subject", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
-   <%= hidden_field "inline", "true" %>
-   <%= render :partial => "subjects/form", :locals => {:f => f} %>
+<%= form_for @subject, :as => "subject", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+  <%= form_context :subject, @subject do |form| %>
+    <%= hidden_field "inline", "true" %>
+    <%= render :partial => "subjects/form", :locals => {:form => form} %>
+  <% end %>
 <% end %>
