--- a/frontend/app/views/subjects/edit.html.erb
+++ b/frontend/app/views/subjects/edit.html.erb
@@ -1,15 +1,20 @@
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Subjects", :controller => :subjects, :action => :index), link_to(@subject.display_string, :controller => :subjects,:action => :show, :id => @subject.id), "Edit"]} %>
-<div class="row-fluid">
-   <div class="span3"></div>
-   <div class="span9">
-      <h2><%= @subject.display_string %>  <span class="label label-info">Subject</span></h2>
-      <br/>
-      <%= jsonmodel_form_for @subject, :as => "subject", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
-         <%= render :partial => "subjects/form", :locals => {:f => f} %>
-         <div class="form-actions">            
-            <button type="submit" class="btn btn-primary">Save Subject</button>   
-            <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
-         </div>
-      <% end %>
-   </div>
-</div>
+<%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Subjects", :controller => :subjects, :action => :index),"New Subject"]} %>
+
+<%= form_for @subject, :as => "subject", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
+  <%= form_context :subject, @subject do |form| %>
+    <div class="row-fluid">
+      <div class="span3">
+        <%= render :partial => "sidebar" %>
+      </div>
+      <div class="span9 record-pane">
+        <h2><%= "New Subject" %>  <span class="label label-info">Subject</span></h2>
+        <br/>
+        <%= render :partial => "subjects/form", :locals => {:form => form} %>
+        <div class="form-actions">
+          <button type="submit" class="btn btn-primary">Save Subject</button>
+          <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+<% end %>
