--- a/frontend/app/views/subjects/new.html.erb
+++ b/frontend/app/views/subjects/new.html.erb
@@ -1,18 +1,20 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Subjects", :controller => :subjects, :action => :index),"New Subject"]} %>
 
-<%= jsonmodel_form_for @subject, :as => "subject", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
-  <div class="row-fluid">
-    <div class="span3">
-      <%= render :partial => "sidebar" %>
-    </div>
-    <div class="span9 record-pane">
-      <h2><%= "New Subject" %>  <span class="label label-info">Subject</span></h2>
-      <br/>      
-      <%= render :partial => "subjects/form", :locals => {:f => f} %>
-      <div class="form-actions">            
-        <button type="submit" class="btn btn-primary">Save Subject</button>   
-        <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+<%= form_for @subject, :as => "subject", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+  <%= form_context :subject, @subject do |form| %>
+    <div class="row-fluid">
+      <div class="span3">
+        <%= render :partial => "sidebar" %>
+      </div>
+      <div class="span9 record-pane">
+        <h2><%= "New Subject" %>  <span class="label label-info">Subject</span></h2>
+        <br/>
+        <%= render :partial => "subjects/form", :locals => {:form => form} %>
+        <div class="form-actions">
+          <button type="submit" class="btn btn-primary">Save Subject</button>
+          <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+        </div>
       </div>
     </div>
-  </div>
+  <% end %>
 <% end %>
