--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -1,22 +1,24 @@
-<h2><%= @archival_object.title %>  <span class="label label-info">Archival Object</span></h2>
-<br/>
-<%= render :partial => "shared/form_messages", :locals => {:object => @archival_object, :f => f} %>
+<h2>
+  <%= @archival_object.title %> <span class="label label-info">Archival Object</span>
+</h2>
+
+<%= render :partial => "shared/form_messages", :locals => {:form => form} %>
 
 <fieldset>
 
+  <%= form.hidden_input "parent" %>
+  <%= form.hidden_input "resource" %>
+  <%= hidden_field_tag "ao_id", @archival_object.id %>
+
   <section id="basic_information">
     <h3>Basic Information</h3>
-    <%= render :partial => "archival_objects/forms/basic_information", :locals => {:f => f} %>
+    <%= render :partial => "archival_objects/forms/basic_information", :locals => {:form => form} %>
   </section>
 
-
-  <%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @archival_object, :method => :extents} %>
-  <%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @archival_object, :method => :external_documents} %>
-  <%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @archival_object, :method => :rights_statements} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "rights_statements"} %>
 
 
 </fieldset>
-
-<%= f.hidden_field :parent %>
-<%= f.hidden_field :resource %>
-<%= hidden_field_tag "ao_id", @archival_object.id %>
