--- a/frontend/app/views/groups/edit.erb
+++ b/frontend/app/views/groups/edit.erb
@@ -7,9 +7,10 @@
   <div class="span9 record-pane">
     <h2><%= @group.description %> <span class="label label-info">Group</span></h2>
 
-    <%= jsonmodel_form_for @group, :as => "group", :url => {:action => :update, :id => @group.id}, :html => {:class => 'form-horizontal'} do |f| %>
-   
-    <%= render :partial => "groups/form", :locals => {:f => f} %>
+    <%= form_for @group, :as => "group", :url => {:action => :update, :id => @group.id}, :html => {:class => 'form-horizontal'} do |f| %>
+      <%= form_context :group, @group.to_hash(true) do |form| %>
+        <%= render :partial => "groups/form", :locals => {:form => form} %>
+      <% end %>
     <% end %>
   </div>
 </div>
