--- a/frontend/app/views/groups/new.erb
+++ b/frontend/app/views/groups/new.erb
@@ -1,15 +1,16 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Manage Groups", :controller => :groups, :action => :index), "New Group"]} %>
 
 <div class="row-fluid">
-  <div class="span3">
-  </div>
+  <div class="span3"></div>
 
   <div class="span9 record-pane">
     <h2>New Group <span class="label label-info">Group</span></h2>
 
-    <%= jsonmodel_form_for @group, :as => "group", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
-    <%= f.label_and_field :group_code %>
-    <%= render :partial => "groups/form", :locals => {:f => f} %>
+    <%= form_for @group, :as => "group", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+      <%= form_context :group, @group.to_hash(true) do |form| %>
+        <%= form.label_and_textfield :group_code %>
+        <%= render :partial => "groups/form", :locals => {:form => form} %>
+      <% end %>
     <% end %>
   </div>
 </div>
