--- a/frontend/app/views/repository/new.html.erb
+++ b/frontend/app/views/repository/new.html.erb
@@ -1,20 +1,23 @@
-<%= jsonmodel_form_for @repository, :as => "repository", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
-   <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal">×</button>
-    <h3>Create Repository</h3>
-   </div>
-   <div class="modal-body">
-      <%= render :partial => "shared/form_messages", :locals => {:object => @repository, :f => f} %>
+<%= form_for @repository, :as => "repository", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+  <%= form_context :repository, @repository.to_hash(true) do |form| %>
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal">×</button>
+      <h3>Create Repository</h3>
+    </div>
+    <div class="modal-body">
+      <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
       <fieldset>
-        <%= f.label_with_field :repo_code, f.text_field(:repo_code, :size => 10) %>
-        <%= f.label_with_field :description, f.text_area(:description, :rows => 3) %>
+        <%= form.label_and_textfield "repo_code", :field_opts => {:size => 10} %>
+        <%= form.label_and_textarea "description" %>
       </fieldset>
-   </div>
-   <div class="modal-footer">
+    </div>
+    <div class="modal-footer">
       <input class="btn btn-primary" type="submit" name="commit" value="Create Repository" />
       <button class="btn btn-cancel" data-dismiss="modal">Cancel</button>
-   </div>
+    </div>
+  <% end %>
 <% end %>
+
 <script>
   $('form#new_repository').ajaxForm({
      beforeSubmit: function() {
