--- a/frontend/app/views/resources/_edit_inline.html.erb
+++ b/frontend/app/views/resources/_edit_inline.html.erb
@@ -1,14 +1,16 @@
-<%= jsonmodel_form_for @resource, :as => "resource", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
-  <div class="row-fluid">
-    <div class="span3">
-      <%= render :partial => "resources/sidebar" %>
+<%= form_for @resource, :as => "resource", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
+  <%= form_context :resource, @resource.to_hash(true) do |form| %>
+    <div class="row-fluid">
+      <div class="span3">
+        <%= render :partial => "resources/sidebar" %>
+      </div>
+      <div class="span9 record-pane">
+         <%= render :partial => "resources/form_container", :locals => {:form => form} %>
+         <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Save Resource</button>
+            <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+         </div>
+      </div>
     </div>
-    <div class="span9 record-pane">
-       <%= render :partial => "resources/form_container", :locals => {:f => f} %>
-       <div class="form-actions">
-          <button type="submit" class="btn btn-primary">Save Resource</button>
-          <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
-       </div>
-    </div>
-  </div>
+  <% end %>
 <% end %>
